vpc2.tf
provider "aws" {
  region = "ap-south-1"
  profile = "myayush"
}

resource "aws_vpc" "myvpc" {
  cidr_block = "192.168.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = "true"
  
  tags = {
    Name = "myvpc"
   }    
}

resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.myvpc.id
  cidr_block = "192.168.0.0/24"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
   Name = "public_subnet"
   }
}

resource "aws_subnet" "private_subnet" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "192.168.1.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name = "private_subnet"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.myvpc.id

  tags = {
    Name = "gw"
  }
}

resource "aws_route_table" "rt1" {
  vpc_id = aws_vpc.myvpc.id
  
   route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
   }

     tags = {
    Name = "routetable1"
  } 
}
resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.rt1.id
}

resource "aws_eip" "natlb" {
  vpc = true
}

resource "aws_nat_gateway" "gw2" {
  allocation_id = aws_eip.natlb.id
  subnet_id = aws_subnet.public_subnet.id

  tags = {
    Name = "NAT_gw"
   }
}

resource "aws_route_table" "rt2" {
  vpc_id = aws_vpc.myvpc.id
  
   route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.gw2.id
   }

     tags = {
    Name = "at_routetable2"
  } 
}

resource "aws_route_table_association" "rta2" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.rt2.id
}

resource "aws_security_group" "allow_ssh" {
 name = "allow_ssh"
 vpc_id = aws_vpc.myvpc.id
  
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks =  ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "public_sg"
  }
}
 
resource "aws_security_group" "allow_mysql" {
 name = "allow_mysql"
 vpc_id = aws_vpc.myvpc.id
  
  ingress {
    description = "MYSQL-rule"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks =  ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "private_sg"
  }
}
 
resource "aws_instance" "wordpress" {
  ami           = "ami-000cbce3e1b899ebd"
  instance_type = "t2.micro"
  
  subnet_id = aws_subnet.public_subnet.id
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]
  key_name = "mykey"
  availability_zone = "ap-south-1a"

  tags = {
    Name = "wordpress"
  }
}

resource "aws_instance" "MySQL" {
  ami           = "ami-08706cb5f68222d09"
  instance_type = "t2.micro"
  subnet_id = aws_subnet.private_subnet.id
  vpc_security_group_ids = [aws_security_group.allow_mysql.id]
  key_name = "mykey"
  availability_zone = "ap-south-1b"


 tags = {
    Name = "mysql"
  }
}
